Opened 9 years ago

Closed 9 years ago

#4650 closed defect (fixed)

gif regression

Reported by: ami_stuff Owned by:
Priority: important Component: undetermined
Version: git-master Keywords: gif
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: yes

Description

attached file is image, not anim gif

C:\>ffmpeg -i reg.gif out.bmp
ffmpeg version N-72915-gf17d973 Copyright (c) 2000-2015 the FFmpeg developers
  built with gcc 4.5.0 (GCC) 20100414 (Fedora MinGW 4.5.0-1.fc14)
  configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-pthreads --enable-memalign-hack --enable-runtime-cpudetect --
enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -lw
inmm -lpthread' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snapsh
ots/build/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/sna
pshots/build/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3 --
enable-nonfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-li
bvorbis --enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-li
bopencore-amrwb --enable-libmp3lame --enable-libfreetype --enable-libvpx --disab
le-decoder=libvpx
  libavutil      54. 27.100 / 54. 27.100
  libavcodec     56. 41.100 / 56. 41.100
  libavformat    56. 36.100 / 56. 36.100
  libavdevice    56.  4.100 / 56.  4.100
  libavfilter     5. 16.101 /  5. 16.101
  libswscale      3.  1.101 /  3.  1.101
  libswresample   1.  2.100 /  1.  2.100
  libpostproc    53.  3.100 / 53.  3.100
Input #0, gif, from 'reg.gif':
  Duration: N/A, bitrate: N/A
    Stream #0:0: Video: gif, bgra, 1024x768, 100 tbr, 100 tbn, 100 tbc
Output #0, image2, to 'out.bmp':
  Metadata:
    encoder         : Lavf56.36.100
    Stream #0:0: Video: bmp, bgra, 1024x768, q=2-31, 200 kb/s, 100 fps, 100 tbn,
 100 tbc
    Metadata:
      encoder         : Lavc56.41.100 bmp
Stream mapping:
  Stream #0:0 -> #0:0 (gif (native) -> bmp (native))
Press [q] to stop, [?] for help
[image2 @ 0x297ee60] Could not get frame filename number 2 from pattern 'out.bmp
' (either set updatefirst or use a pattern like %03d within the filename pattern
)
av_interleaved_write_frame(): Invalid argument
[image2 @ 0x297ee60] Could not get frame filename number 2 from pattern 'out.bmp
' (either set updatefirst or use a pattern like %03d within the filename pattern
)
av_interleaved_write_frame(): Invalid argument
[image2 @ 0x297ee60] Could not get frame filename number 2 from pattern 'out.bmp
' (either set updatefirst or use a pattern like %03d within the filename pattern
)
av_interleaved_write_frame(): Invalid argument
[image2 @ 0x297ee60] Could not get frame filename number 2 from pattern 'out.bmp
' (either set updatefirst or use a pattern like %03d within the filename pattern
)
av_interleaved_write_frame(): Invalid argument
[image2 @ 0x297ee60] Could not get frame filename number 2 from pattern 'out.bmp
' (either set updatefirst or use a pattern like %03d within the filename pattern
)
av_interleaved_write_frame(): Invalid argument
[image2 @ 0x297ee60] Could not get frame filename number 2 from pattern 'out.bmp
' (either set updatefirst or use a pattern like %03d within the filename pattern
)
av_interleaved_write_frame(): Invalid argument
[image2 @ 0x297ee60] Could not get frame filename number 2 from pattern 'out.bmp
' (either set updatefirst or use a pattern like %03d within the filename pattern
)
av_interleaved_write_frame(): Invalid argument
[image2 @ 0x297ee60] Could not get frame filename number 2 from pattern 'out.bmp
' (either set updatefirst or use a pattern like %03d within the filename pattern
)
av_interleaved_write_frame(): Invalid argument
[image2 @ 0x297ee60] Could not get frame filename number 2 from pattern 'out.bmp
' (either set updatefirst or use a pattern like %03d within the filename pattern
)
av_interleaved_write_frame(): Invalid argument
frame=   10 fps=0.0 q=0.0 Lsize=N/A time=00:00:00.10 bitrate=N/A dup=9 drop=0

video:30721kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing
 overhead: unknown
Conversion failed!

Attachments (1)

reg.gif (414.5 KB ) - added by ami_stuff 9 years ago.

Download all attachments as: .zip

Change History (4)

by ami_stuff, 9 years ago

Attachment: reg.gif added

comment:1 by Carl Eugen Hoyos, 9 years ago

Keywords: gif added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Regression since c5092025 - related to ticket #3052.

comment:2 by Carl Eugen Hoyos, 9 years ago

Analyzed by developer: set

Works fine with:

$ ffmpeg -min_delay 0 -i reg.gif

The issue is that the gif demuxer sets a default frame duration of 1/10 second for frames that have a duration < 2/10 seconds and ffmpeg (the application) correctly copies the time base and makes the output CFR. The input file has a duration of 0 for one frame.

comment:3 by Michael Niedermayer, 9 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.