avformat/gifdec: correct r_frame_rate for single frame gifs

Fixes Ticket4650

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>